# Spider_project

./: CMakeLists.txt  Cards.cpp  Menu.h  SpiderLogic.h  Tile.cpp  Tile.h  box.txt  deck.txt  main.cpp  someInfo
